@@ -1,3 +1,7 @@
+2004-06-11  Jaka Mocnik  <jaka@gnu.org>
+
+	* src/preferences.c (prefs_response_cb): display help. fixes #143643.
+
 2004-05-26  Jaka Mocnik  <jaka@gnu.org>
 
 	* configure.in: 2.6.1; tagged as GHEX_2_6_1.
